[gd_scene load_steps=10 format=3 uid="uid://cye2rueypwkyd"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_ny74v"]
[ext_resource type="Texture2D" uid="uid://mveli6rq5o0u" path="res://assets/Sprite-background.png" id="2_2g8ug"]
[ext_resource type="PackedScene" uid="uid://c13dt51p0jsdr" path="res://scenes/player.tscn" id="2_veia3"]
[ext_resource type="Texture2D" uid="uid://bssh7xogrmvwt" path="res://assets/fence.png" id="4_kupph"]
[ext_resource type="PackedScene" uid="uid://bperx3i3ec4mo" path="res://scenes/gameoverscreen.tscn" id="5_sxpyj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qoiue"]
size = Vector2(1287, 115)

[sub_resource type="Curve2D" id="Curve2D_nrwdn"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 35, -2, 0, 0, 0, 0, 1125, -1)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qvbin"]
size = Vector2(1344, 176)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4mrh5"]
size = Vector2(107.5, 680.75)

[node name="Main" type="Node"]
script = ExtResource("1_ny74v")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score Label" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 16.0
offset_top = -8.0
offset_right = 206.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(0.717647, 0.380392, 0.737255, 1)
theme_override_font_sizes/font_size = 50
text = "Score: 0"

[node name="Health Label" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 906.0
offset_top = -8.0
offset_right = 1139.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0.764706, 0.219608, 0.772549, 1)
theme_override_font_sizes/font_size = 50
text = "Health: 5"

[node name="GameOver" parent="CanvasLayer" instance=ExtResource("5_sxpyj")]
unique_name_in_owner = true
visible = false

[node name="Sprite-background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(662.5, 424)
scale = Vector2(9.62109, 3.92773)
texture = ExtResource("2_2g8ug")

[node name="Despawn Floor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Despawn Floor"]
position = Vector2(587, 672)
shape = SubResource("RectangleShape2D_qoiue")

[node name="Player" parent="." instance=ExtResource("2_veia3")]
position = Vector2(574, 399)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-10, -251)

[node name="Spawn Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_nrwdn")

[node name="PathFollow2D" type="PathFollow2D" parent="Spawn Path"]
unique_name_in_owner = true
position = Vector2(792.299, -1.30523)
rotation = 0.000917431
progress = 757.299

[node name="Walls And Floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls And Floor"]
position = Vector2(575, 699)
shape = SubResource("RectangleShape2D_qvbin")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls And Floor"]
position = Vector2(-42, 309.375)
shape = SubResource("RectangleShape2D_4mrh5")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls And Floor"]
position = Vector2(1199, 309.375)
shape = SubResource("RectangleShape2D_4mrh5")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Fence" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-15, 527)
scale = Vector2(2.5625, 2.5625)
texture = ExtResource("4_kupph")

[node name="Fence2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1229, 527)
scale = Vector2(2.5625, 2.5625)
texture = ExtResource("4_kupph")

[node name="anivlTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="bugCollected" from="Player" to="." method="_on_player_bug_collected"]
[connection signal="damageTaken" from="Player" to="." method="_on_player_damage_taken"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="anivlTimer" to="." method="_on_anivl_timer_timeout"]
